Fixed chat stylesheet: -moz-pre-wrap preserves newlines but wraps if necessary.
darcs-hash:20060628143743-8cc29-fcfc5cdd7ea78591fc68467042858c4870e8d000.gz

--- a/chrome/content/chat.css
+++ b/chrome/content/chat.css
@@ -56,7 +56,7 @@ a:hover
 
 .body
 {
-  white-space: pre;
+  white-space: -moz-pre-wrap;
   }
 
 .actions
